--- a/src/main/resources/templates/backoffice/fragments/fragment.html
+++ b/src/main/resources/templates/backoffice/fragments/fragment.html
@@ -11,13 +11,7 @@
 
 
     <ul th:fragment="sidebar" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-        <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/backoffice/home">
-<!--            <div class="sidebar-brand-icon rotate-n-15">-->
-
-<!--                -->
-<!--&lt;!&ndash;                               <i class="fas fa-laugh-wink"></i>&ndash;&gt;-->
-<!--            </div>-->
             <img class="logo-icon" th:src="@{/backoffice/img/logo_white_back.svg}"/>
             <div class="sidebar-brand-text mx-3">h.Livv Admin</div>
         </a>
@@ -35,61 +29,24 @@
         <div class="sidebar-heading">
             Interface
         </div>
-        <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-               aria-expanded="true" aria-controls="collapseTwo">
-                <i class="fas fa-fw fa-folder"></i>
-                <span>사용자 관리</span>
+            <a class="nav-link" href="/backoffice/members">
+                <i class="fas fa-fw fa-chart-area"></i>
+                <span>고객 관리</span>
             </a>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-<!--                    <h6 class="collapse-header">Custom Components:</h6>-->
-                    <a class="collapse-item" href="/backoffice/members">고객 정보</a>
-                    <a class="collapse-item" href="/backoffice/auth">권한 부여(Admin Only)</a>
-                </div>
-            </div>
-        </li>
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-               aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-folder"></i>
-                <span>주문 관리</span>
-            </a>
-            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                 data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Utilities:</h6>
-                    <a class="collapse-item" href="utilities-color.html">주문 정보</a>
-                    <a class="collapse-item" href="utilities-border.html">배송 정보</a>
-                    <a class="collapse-item" href="utilities-animation.html">콜라보 정보</a>
-                    <a class="collapse-item" href="utilities-other.html">래플 정보</a>
-                </div>
-            </div>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/backoffice/products">
                 <i class="fas fa-fw fa-chart-area"></i>
-                <span>상품 관리</span></a>
+                <span>상품 관리</span>
+            </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/backoffice/restores">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>리스토어 관리</span></a>
         </li>
-<!--        &lt;!&ndash; Divider &ndash;&gt;-->
-<!--        <hr class="sidebar-divider">-->
-<!--        &lt;!&ndash; Heading &ndash;&gt;-->
-<!--        <div class="sidebar-heading">-->
-<!--            Addons-->
-<!--        </div>-->
-        <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
-        <!-- Sidebar Toggler (Sidebar) -->
-<!--        <div class="text-center d-none d-md-inline">-->
-<!--            <button class="rounded-circle border-0" id="sidebarToggle"></button>-->
-<!--        </div>-->
     </ul>
 
 
@@ -107,7 +64,7 @@
             <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${memberDto.getName()}"></span>
+                    <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="|${adminMemberDto.getName()} 매니저님|"></span>
                     <img class="img-profile rounded-circle"
                          src="img/undraw_profile.svg">
                 </a>
