--- a/src/main/resources/templates/backoffice/fragments/restoreModal.html
+++ b/src/main/resources/templates/backoffice/fragments/restoreModal.html
@@ -126,13 +126,13 @@
                                             변경
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right animated--grow-in" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">S | 구성품이 모두 있으며 흠집 없음</a>
+                                            <a class="dropdown-item" href="#">S | 구성품이 모두 있으며 흠집 없음 (50% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">A | 약간의 흠집이 있지만 사용에 문제가 없으며, 구성품이 모두 있음</a>
+                                            <a class="dropdown-item" href="#">A | 약간의 흠집이 있지만 사용에 문제가 없음 (40% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">B | 눈에 띄는 흠집이 있으나 사용에 문제가 없음, 구성품이 모두 있음</a>
+                                            <a class="dropdown-item" href="#">B | 눈에 띄는 흠집이 있으나 사용에 문제가 없음 (30% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">C | 큰 흠집이 있거나 사용에 문제가 있거나 구성품이 모두 없는 경우</a>
+                                            <a class="dropdown-item" href="#">C | 폐기 / 반송 (적립금 없음)</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -150,13 +150,13 @@
                                             변경
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right animated--grow-in" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item inspected-grade-item" href="#">S | 구성품이 모두 있으며 흠집 없음</a>
+                                            <a class="dropdown-item inspected-grade-item" href="#">S | 구성품이 모두 있으며 흠집 없음 (50% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item inspected-grade-item" href="#">A | 약간의 흠집이 있지만 사용에 문제가 없으며, 구성품이 모두 있음</a>
+                                            <a class="dropdown-item inspected-grade-item" href="#">A | 약간의 흠집이 있지만 사용에 문제가 없음 (40% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item inspected-grade-item" href="#">B | 눈에 띄는 흠집이 있으나 사용에 문제가 없음, 구성품이 모두 있음</a>
+                                            <a class="dropdown-item inspected-grade-item" href="#">B | 눈에 띄는 흠집이 있으나 사용에 문제가 없음 (30% 적립)</a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item inspected-grade-item" href="#">C | 큰 흠집이 있거나 사용에 문제가 있거나 구성품이 모두 없는 경우</a>
+                                            <a class="dropdown-item inspected-grade-item" href="#">C | 폐기 / 반송 (적립금 없음)</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -168,9 +168,9 @@
                         <div data-v-0c9f3f9e="" class="unit_content">
                             <input data-v-5ee806c3="" type="text" autocomplete="off" maxlength="25" class="input_txt text_fill"/>
                             <p id="restorePayback" data-v-24a03828="" data-v-6d416020="" class="desc desc_modify" data-v-0c9f3f9e=""> </p>
-                            <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>
-                            <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>
-                            <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>
+<!--                            <button data-v-14ec1f2e="" data-v-6d416020="" type="button" class="btn btn_modify outlinegrey small" data-v-0c9f3f9e=""> 변경 </button>-->
+<!--                            <button type="button" class="btn btn_save outlinegrey small" style="display: none">저장</button>-->
+<!--                            <button type="button" class="btn btn_cancel outlinegrey small" style="display: none">취소</button>-->
                         </div>
                     </div>
                     <div data-v-0c9f3f9e="" data-v-6d416020="" data-v-708ef468="" class="unit">
@@ -202,6 +202,7 @@
                 </div>
 
                 <div class="modal-footer">
+                    <a id="transferMessage" class="btn btn-primary">문자 / 이메일 전송</a>
                     <a id="updateRestore" class="btn btn-primary">수정 반영</a>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
                 </div>
