--- a/src/main/resources/templates/backoffice/login.html
+++ b/src/main/resources/templates/backoffice/login.html
@@ -45,7 +45,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">H.Livv Admin</h1>
                                     </div>
                                     <form class="member" role="form" th:action="@{/backoffice/login}" method="post">
                                         <div class="form-group">
