--- a/src/main/resources/templates/backoffice/products.html
+++ b/src/main/resources/templates/backoffice/products.html
@@ -91,7 +91,8 @@
                                         th:data-productBrand="${product.productBrand}"
                                         class="modal-item product-modal" data-toggle="modal" data-target="#productDetailModal" th:each="product : ${products}" >
                                         <td th:text="${product.name}"></td>
-                                        <td th:text="${product.price}"></td>
+<!--                                        <td th:text="${product.price}"></td>-->
+                                        <td th:text="${T(java.lang.String).format('%,d', product.price)} + '원'"></td>
                                         <td th:text="${product.discountPercent}+'%'"></td>
                                         <td th:text="${(product.price/100)*(100 - product.discountPercent)}"></td>
                                         <td th:text="${product.productType}"></td>
