--- a/src/main/resources/static/backoffice/css/backoffice.css
+++ b/src/main/resources/static/backoffice/css/backoffice.css
@@ -65,10 +65,10 @@
 
 /* 짝수 행 */
 .even-row {
-    background-color: #f2f2f2; /* 변경하고자 하는 색상으로 대체 가능 */
+    background-color: #ffffff;
 }
 
 /* 홀수 행 */
 .odd-row {
-    background-color: #ffffff; /* 변경하고자 하는 색상으로 대체 가능 */
+    background-color: #f2f2f2;
 }
